--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 
-<div class="wrapper">
+<div class="window-wrapper">
     <header>Space Invaders</header>
-    <div class="game">
-
+    <div class="game-wrapper">
+        <div class="game"></div>
     </div>
+    <footer>by FFHS WebT Group 10</footer>
 </div>
 <script type="module" src="js/main.js"></script>
 </body>
