--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </div>
     <footer>by FFHS WebT Group 10</footer>
 </div>
-<script type="module" src="js/main.js"></script>
+<script type="module" src="main.js"></script>
 </body>
 </html>
