--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 <div class="window-wrapper">
     <header>Space Invaders</header>
     <div class="game-wrapper">
-        <div class="game"></div>
+        <div id="playerNameForm" class="playerNameForm">
+            <input id="playerName" name="playerName" type="text"/>
+            <label for="playerName">Player Name:</label>
+            <button id="startGame">GO</button>
+        </div>
+        <div id="game" class="game"></div>
+        <div id="endScreen" class="endScreen">
+            <label id="playerScore"> Your Score is:</label>
+            <button id="restartBtn">Restart</button>
+        </div>
     </div>
     <footer>by FFHS WebT Group 10</footer>
 </div>
