WIP: Add method to GET high scores

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <div id="endScreen" class="endScreen">
             <label id="playerScore"> Your Score is:</label>
             <button id="restartBtn">Restart</button>
+            <div id="highscores" class="highscores">
+            </div>
         </div>
     </div>
     <footer>by FFHS WebT Group 10</footer>
