--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         <div id="endScreen" class="endScreen">
             <label id="playerScore"> Your Score is:</label>
             <button id="restartBtn">Restart</button>
-            <div id="highscores" class="highscores">
-            </div>
+            <div id="highscores" class="highscores"></div>
         </div>
     </div>
     <footer>by FFHS WebT Group 10</footer>
