Improve basic POST and GET functionality for high scores

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <div id="game" class="game"></div>
         <div id="endScreen" class="endScreen">
             <label id="playerScore"> Your Score is:</label>
-            <button id="restartBtn">Restart</button>
+            <div class="btnBox">
+                <button id="restartBtn">Restart</button>
+            </div>
             <div id="highscores" class="highscores"></div>
         </div>
     </div>
