--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <label for="playerName">Player Name:</label>
             <button id="startGame">GO</button>
         </div>
-        <div id="game" class="game"></div>
+        <div id="game" class="game">
+            <div class="playerDashboard"></div>
+        </div>
         <div id="endScreen" class="endScreen">
             <label id="playerScore"> Your Score is:</label>
             <div class="btnBox">
